# ChangeLog for media-video/sundtek-tv
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*sundtek-tv (17 Feb 2014)

  29 Mar 2014; Martin Väth <martin@mvath.de>:
  Add zsh completion support. Version bump

  17 Feb 2014; Martin Väth <martin@mvath.de>:
  New ebuild from scratch.